--- a/BilgiOtel/FrmLogin.resx
+++ b/BilgiOtel/FrmLogin.resx
@@ -117,4 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
