--- a/BilgiOtel/FrmMain.resx
+++ b/BilgiOtel/FrmMain.resx
@@ -127,6 +127,19 @@
         JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAABoElEQVRIS+1Tv0vDQBg9FRz8GxRUcHbw
+        PxFd7X2hdlN0EhysTirVVXHR3sUuTuKq/02ri3aQJA2KEL93vcRcaTCi4NIHj+Te974fd5eIEUbIELdo
+        PtJUA2NdnbPy3yD0iUJNMTOx5HdP2vDvgMkHimdNfrST5GZ1kpOOQy2f+NkNfW8NOo4kV9RhpOU6PPDy
+        uhsqemQeoRZ0Bwg4BRQ1oJdscOrEuBZ0B6Z73qTpHnqZIwqV9+DEuBZ0B0MafLy25IKJ8YXy2r1kRRXE
+        4IE3Fyts4B4RM/Llrg0LTIsjAeMrOWtlAc9gHt/joQ1/wVwymvR38szPxtDLGoD9OE6YLya36JKLkNTr
+        41GzsoTJQ1/ugJFPVWiIWdv34K4T/DUs9i5pJl0HmjZ5sk5/20PZDpTcgBc5vevqNGqkawNMwcZtezTt
+        5KI2ZZppurNFviUPcos6yOV1p1/L20oSMSYCLc8zs09NNA0UrWRaSXKdZeTyu0q1SNEZhPdU4EkOYOKf
+        ay/VyhI5yEWNnP6GBpkpUN6+MfEzr5dhUS60Ef4TQnwCqod4pL452NkAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
