--- a/BilgiOtel/FrmMain.resx
+++ b/BilgiOtel/FrmMain.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
@@ -127,7 +127,79 @@
         JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnCalismaEkleDuzenle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnKullaniciEkleDuzenle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnKampanyaEkleDuzenle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
+        8H9VKBuQ3fllUcKzLwsTnwJxB0gMWR0e/OnzoqT1nxYnqYPUwwFMAZgNNBBJAwQDxZDVEYHffZuXKAvS
+        AwYwCTAb5GpUxSALniKrIxKvAukBA5ggmE09Cz6C9IABTBDMxhZEixLakdURi0F6wABZABzJIEsgEUxq
+        JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnCalisanEkleDuzenle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAABoElEQVRIS+1Tv0vDQBg9FRz8GxRUcHbw
@@ -140,7 +212,7 @@
         ay/VyhI5yEWNnP6GBpkpUN6+MfEzr5dhUS60Ef4TQnwCqod4pL452NkAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnOdaEkleDuzenle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
         JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAtklEQVRIS2MYBSMEfFmU+B+EoVzqA7pa
