--- a/BilgiOtel/FrmYonetici.resx
+++ b/BilgiOtel/FrmYonetici.resx
@@ -151,7 +151,7 @@
         JKNgkB4wwBDAAZA1E4Oh2kjXSCyGGj+cLIByKQbD0IJRMICAgQEACtZxzpPNbq8AAAAASUVORK5CYII=
 </value>
   </data>
-  <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="cmsIslemler.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
 </root>
